--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     /* Interop Constraints */
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-
+    "moduleResolution": "Node",
     /* Type Checking */
     "strict": true /* Enable all strict type-checking options. */,
     /* Completeness */
