--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wuolahextra",
   "description": "UserScript para Wuolah",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "homepage": "https://github.com/pablouser1/WuolahExtra",
   "license": "MIT",
   "author": "Pablo Ferreiro",
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "pdf-lib": "^1.17.1",
     "rollup": "^2.66.1",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-userscript-metablock": "^0.3.1",
