--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "wuolahextra",
   "description": "UserScript para Wuolah",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "homepage": "https://github.com/pablouser1/WuolahExtra",
   "license": "MIT",
   "author": "Pablo Ferreiro",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "rollup --config --environment APP_MODE:production",
     "dev": "rollup --config -w --environment APP_MODE:development"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-typescript": "^11.1.5",
     "pdf-lib": "^1.17.1",
-    "rollup": "^2.66.1",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-userscript-metablock": "^0.3.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5"
+    "rollup": "^4.0.2",
+    "rollup-plugin-sass": "^1.12.21",
+    "rollup-plugin-serve": "^2.0.2",
+    "rollup-plugin-userscript-metablock": "^0.3.3",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2"
   }
 }
