--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wuolahextra",
   "description": "UserScript para Wuolah",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "homepage": "https://github.com/pablouser1/WuolahExtra",
   "license": "MIT",
   "author": "Pablo Ferreiro",
@@ -12,6 +12,7 @@
     "dev": "rollup --config -w --environment APP_MODE:development"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "pdf-lib": "^1.17.1",
     "rollup": "^4.0.2",
@@ -20,5 +21,8 @@
     "rollup-plugin-userscript-metablock": "^0.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "gulagcleaner_wasm": "^0.10.3"
   }
 }
