--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wuolahextra",
   "description": "UserScript para Wuolah",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "homepage": "https://github.com/pablouser1/WuolahExtra",
   "license": "MIT",
   "author": "Pablo Ferreiro",
@@ -14,15 +14,16 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@types/tampermonkey": "^5.0.2",
     "pdf-lib": "^1.17.1",
-    "rollup": "^4.0.2",
+    "rollup": "^4.9.3",
     "rollup-plugin-sass": "^1.12.21",
     "rollup-plugin-serve": "^2.0.2",
     "rollup-plugin-userscript-metablock": "^0.3.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "gulagcleaner_wasm": "^0.10.3"
+    "gulagcleaner_wasm": "^0.11.1"
   }
 }
