--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
   "name": "wuolahextra",
   "description": "UserScript para Wuolah",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "homepage": "https://github.com/pablouser1/WuolahExtra",
   "license": "MIT",
   "author": "Pablo Ferreiro",
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "rollup --config --environment APP_MODE:production",
-    "dev": "rollup --config -w --environment APP_MODE:development"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/tampermonkey": "^5.0.2",
-    "pdf-lib": "^1.17.1",
-    "rollup": "^4.9.3",
-    "rollup-plugin-sass": "^1.12.21",
-    "rollup-plugin-serve": "^2.0.2",
-    "rollup-plugin-userscript-metablock": "^0.3.3",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "sass": "^1.70.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vite-plugin-monkey": "^3.5.1"
   },
   "dependencies": {
-    "gulagcleaner_wasm": "^0.11.1"
+    "gulagcleaner_wasm": "^0.12.1",
+    "pdf-lib": "^1.17.1"
   }
 }
