--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,20 @@
 {
   "compilerOptions": {
-    // project options
-    "lib": [
-      "ESNext",
-      "dom"
-    ], // specifies which default set of type definitions to use ("DOM", "ES6", etc)
-    "outDir": "dist", // .js (as well as .d.ts, .js.map, etc.) files will be emitted into this directory.,
-    "removeComments": true, // Strips all comments from TypeScript files when converting into JavaScript- you rarely read compiled code so this saves space
-    "target": "ESNext", // Target environment. Most modern browsers support ES6, but you may want to set it to newer or older. (defaults to ES3)
-    // Module resolution
-    "baseUrl": "./", // Lets you set a base directory to resolve non-absolute module names.
-    "esModuleInterop": true, // fixes some issues TS originally had with the ES6 spec where TypeScript treats CommonJS/AMD/UMD modules similar to ES6 module
-    "moduleResolution": "node", // Pretty much always node for modern JS. Other option is "classic"
-    // Source Map
-    "sourceMap": true, // enables the use of source maps for debuggers and error reporting etc
-    "sourceRoot": "/", // Specify the location where a debugger should locate TypeScript files instead of relative source locations.
-    // Strict Checks
-    "alwaysStrict": true, // Ensures that your files are parsed in the ECMAScript strict mode, and emit “use strict” for each source file.
-    "allowUnreachableCode": false, // pick up dead code paths
-    "noImplicitAny": true, // In some cases where no type annotations are present, TypeScript will fall back to a type of any for a variable when it cannot infer the type.
-    "strictNullChecks": true, // When strictNullChecks is true, null and undefined have their own distinct types and you’ll get a type error if you try to use them where a concrete value is expected.
-    // Linter Checks
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "moduleResolution": "Node",
+    "strict": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "noEmit": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true, // Report errors on unused local variables.
-    "noUnusedParameters": true // Report errors on unused parameters in functions
+    "skipLibCheck": true
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules/**/*",
-    "dist/**/*"
-  ]
+  "include": ["src"]
 }
