--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "removeComments": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "types": [
