Descargar elementos de carpetas en formato zip con JSZip 2.6.1

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "gulagcleaner_wasm": "^0.12.2",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "jszip": "2.6.1"
   }
 }
